--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [build-system]
 build-backend = "setuptools.build_meta"
 requires = [
-  "setuptools>=46.4.0",
-  "wheel",
-  "setuptools_scm[toml]>=6.2",
+  "setuptools >= 48",
+  "wheel >= 0.29.0",
+  "setuptools_scm[toml] >= 7",
+  "setuptools_scm_git_archive",
 ]
 
 [tool.setuptools_scm]
@@ -12,4 +13,4 @@ write_to = "src/pdfunlock/_version.py"
 # see https://github.com/psf/black/issues/683 for why this can't be in setup.cfg
 [tool.black]
 line-length = 110
-target-version = ['py38', 'py39', 'py310']
+target-version = ['py39', 'py310', 'py311']
