--- a/setup.cfg
+++ b/setup.cfg
@@ -4,21 +4,30 @@ author = Andrew Powers-Holmes
 author_email = aholmes@omnom.net
 maintainer = Andrew Powers-Holmes
 maintainer_email = aholmes@omnom.net
-license_files = LICENSE.md
+license = GPLv3
+license_file = LICENSE.md
+project_urls =
+    Documentation = https://github.com/neggles/pdfunlock/wiki
+    Source = https://github.com/neggles/pdfunlock
+    Tracker = https://github.com/neggles/pdfunlock/issues
 
 [options]
-python_requires = >=3.8
+python_requires = >=3.9
+zip_safe = False
 packages = find:
+platforms = any
 package_dir =
     =src
 py_modules =
     pdfunlock
 include_package_data = True
 install_requires =
-    typer >= 0.6.1, < 0.7.0
-    colorama >= 0.4.3, < 0.5.0
+    typer >= 0.6.1, < 0.8.0
+    colorama >= 0.4.3
     shellingham >= 1.3.0, < 2.0.0
-    rich >= 10.11.0, < 13.0.0
+    rich >= 10.11.0, < 14.0.0
+setup_requires =
+    setuptools-scm >= 7.0.0
 
 [options.packages.find]
 where = src
@@ -30,7 +39,7 @@ where = src
 dev =
     black >= 22.3.0
     flake8 >= 4.0.1
-    setuptools-scm >= 7.0.5
+    setuptools-scm >= 7.0.0
     mypy >= 0.981
 
 [options.entry_points]
