--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ install_requires =
     colorama >= 0.4.3
     shellingham >= 1.3.0, < 2.0.0
     rich >= 10.11.0, < 14.0.0
+    pikepdf >= 7.1.0, < 8.0.0
 setup_requires =
     setuptools-scm >= 7.0.0
 
