--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,9 @@ author_email = aholmes@omnom.net
 maintainer = Andrew Powers-Holmes
 maintainer_email = aholmes@omnom.net
 license = GPLv3
-license_file = LICENSE.md
+license_files =
+    COPYING
+    LICENSE.md
 project_urls =
     Documentation = https://github.com/neggles/pdfunlock/wiki
     Source = https://github.com/neggles/pdfunlock
@@ -42,14 +44,17 @@ dev =
     flake8 >= 4.0.1
     setuptools-scm >= 7.0.0
     mypy >= 0.981
+    build >= 0.10.0
+    twine >= 4.0.2
 
 [options.entry_points]
 console_scripts =
     pdfunlock = pdfunlock.app:app
 
+# see https://github.com/PyCQA/flake8/issues/234#issuecomment-812800722 for why this can't be in pyproject.toml
 [flake8]
 max-line-length = 110
-ignore =
+extend-ignore =
     # these are annoying during development but should be enabled later
     F401 # module imported but unused
     F841 # local variable is assigned to but never used
